# CryptArtistStudio

./: .gitignore  README.md
prompts/: all-prompts.md  bigprompt-2.md  bigprompt-3.md  cryptartist studio logo 2A1.xcf
test/: valleynet-session.CryptArt
test/gamestudiotest1/GameStudioTest1/: game-project.CryptArt  project.godot
test/gamestudiotest1/scripts/: generated_0.gd
v1/: README.md  apply_100_improvements.mjs  apply_wave2_improvements.mjs  apply_wave3_improvements.mjs  build_error_utf8.txt  fix_aria.mjs  fix_dup_aria.mjs  fix_spellcheck.mjs  fix_wave3.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tax-todo.md  tax.md  vite.config.ts
v1/src/: App.tsx  index.css  main.tsx
v1/src-tauri/: 2  Cargo.toml  Entitlements.plist  build_errors.txt  build_errors_utf8.txt  build_rust_error_utf8.txt  build_rust_error_utf8_real.txt  tauri.conf.json
v1/src-tauri/capabilities/: default.json
v1/src-tauri/icons/: icon.icns
v1/src-tauri/src/: ai_integration.rs  ffmpeg_installer.rs  logger.rs  main.rs  state.rs
v1/src/components/: AIOptimizer.tsx  AIStudio.tsx  ApiKeyProvider.tsx  AudioVisualizer.tsx  CommandPalette.tsx  CryptManager.tsx  CryptSaveDialog.tsx  ErrorBoundary.tsx  FFmpegSetup.tsx  GlobalMenuBar.tsx  Header.tsx  Inspector.tsx  (+14 more)
v1/tax-backend/: main.py  requirements.txt  test_blockchain.py  test_ingestion.py  test_tax_rules.py
website/A1/: about.html  contact.html  docs.html  donate-computer-api.js  donate-computer.html  donate-computer.js  download.html  index.html  privacy.html  programs.html  script.js  style.css  terms.html
(+91 files in other folders)
