[package]
name = "cryptartist-studio"
version = "0.1.0"
edition = "2021"
description = "Professional-grade media editing suite powered by AI"
authors = ["CryptArtist <hello@cryptartist.com>"]
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha2 = "0.10"
dirs = "5"
zip = "2"
futures-util = "0.3"
tauri-plugin-dialog = "2"
clap = { version = "4.6.0", features = ["derive"] }
